--- a/packages/SystemUI/res/values/reloaded_strings.xml
+++ b/packages/SystemUI/res/values/reloaded_strings.xml
@@ -89,6 +89,13 @@
     
     <!-- Screenshot -->
     <string name="quick_settings_screenshot_label">Screenshot</string>
+    
+    <!-- Sync QS Tile -->
+    <string name="quick_settings_sync_label">Sync</string>
+    <string name="accessibility_quick_settings_sync_off">Sync off</string>
+    <string name="accessibility_quick_settings_sync_on">Sync on</string>
+    <string name="accessibility_quick_settings_sync_changed_off">Sync turned off</string>
+    <string name="accessibility_quick_settings_sync_changed_on">Sync turned on</string>
 
     <!-- Status Bar -->
     <string name="status_bar_icons_title">Status bar icons</string>
